# pygif

./: .gitignore  README.md  decode-gif.py  gif.py  giflib-sample.py  make-gifs.py  make-test-suite  make-test-suite.py  pyproject.toml  run-test-suite  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: README.md  checkerboard  checkerboard-decode  gif-analyse  gif2png  giflib-sample
src/gif/: __init__.py  image.py  lzw.py  reader.py  writer.py
test-suite/: 255-codes.conf  4095-codes-clear.conf  4095-codes.conf  README.md  TESTS  additional-data.conf  all-blues.conf  all-greens.conf  all-reds.conf  animation-multi-image-explicit-zero-delay.conf  animation-multi-image.conf  animation-no-delays.conf  animation-speed.conf  animation-subimage-add.conf  animation-subimage-move.conf  animation-subimage.conf  animation-zero-delays.conf  animation.conf  comment.conf  depth1.conf  depth2.conf  depth3.conf  depth4.conf  depth5.conf  depth6.conf  depth7.conf  depth8.conf  disabled-transparent.conf  dispose-keep.conf  dispose-none.conf  dispose-restore-background.conf  dispose-restore-previous.conf  double-clears.conf  extra-data.conf  extra-pixels.conf  four-colors.conf  gif87a-animation.conf  gif87a.conf  high-color.conf  icc-color-profile-empty.conf  (+50 more)
